
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sktime-enterprise-timeseries-studio"
version = "0.1.0"
description = "Create an enterprise time-series studio that blends forecasting, classification, and anomaly workflows in one coherent analyst-facing product."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
